# FluxDB

./: .gitignore  DEV_LOG.md  README.md  run-fluxdb.bat  run-fluxdb.sh  start-all.js  start-with-env.bat
fluxdb/: Cargo.toml  check_errors.txt
fluxdb-studio/: index.html  package-lock.json  package.json
fluxdb-studio/dist-electron/: main.js  preload.js
fluxdb-studio/electron/: main.ts  preload.ts
fluxdb-studio/src/: App.tsx  index.css
fluxdb-studio/src/components/Connection/: ConnectionList.tsx  ConnectionModal.tsx
fluxdb-studio/src/components/Dashboard/: Dashboard.tsx
fluxdb-studio/src/components/DataIO/: DeletePanel.tsx  ExportModal.tsx  ImportModal.tsx  ManualInsert.tsx  UpdatePanel.tsx  WritePanel.tsx
fluxdb-studio/src/components/Explorer/: DatabaseExplorer.tsx
fluxdb-studio/src/components/Layout/: Navbar.tsx  Sidebar.tsx  StatusBar.tsx
fluxdb-studio/src/components/QueryEditor/: QueryEditor.tsx  QueryHistory.tsx  QueryToolbar.tsx  ResultsPanel.tsx
fluxdb-studio/src/components/Visualization/: DataTable.tsx  StatCard.tsx  TimeSeriesChart.tsx  index.ts
fluxdb-studio/src/hooks/: index.ts  useConnection.ts  useDatabase.ts  useQuery.ts  useTheme.ts
fluxdb-studio/src/services/: fluxdb.ts
fluxdb-studio/src/stores/: connectionStore.ts  databaseStore.ts  queryStore.ts
fluxdb-studio/src/types/: index.ts
fluxdb/fluxdb-cli/: Cargo.toml
fluxdb/fluxdb-cli/src/: main.rs
fluxdb/fluxdb-core/: Cargo.toml
fluxdb/fluxdb-core/src/: error.rs  lib.rs  types.rs
fluxdb/fluxdb-core/src/compaction/: mod.rs
fluxdb/fluxdb-core/src/compression/: bitstream.rs  decoder.rs  encoder.rs  mod.rs
fluxdb/fluxdb-core/src/memtable/: mod.rs  skiplist.rs
fluxdb/fluxdb-core/src/query/: aggregates.rs  executor.rs  mod.rs  parser.rs  planner.rs
fluxdb/fluxdb-core/src/sstable/: block.rs  bloom.rs  builder.rs  mod.rs  reader.rs
fluxdb/fluxdb-core/src/storage/: database.rs  engine.rs  mod.rs
fluxdb/fluxdb-core/src/wal/: entry.rs  mod.rs  reader.rs  writer.rs
fluxdb/fluxdb-server/: Cargo.toml
fluxdb/fluxdb-server/src/: main.rs
fluxdb/fluxdb-server/src/api/: mod.rs
fluxdb/fluxdb-server/src/protocol/: mod.rs
