[workspace]
resolver = "2"
members = [
    "fluxdb-core",
    "fluxdb-server",
    "fluxdb-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FluxDB Team"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
bincode = "1.3"

# Concurrency
crossbeam-skiplist = "0.1"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Compression
lz4_flex = "0.11"

# Checksums
crc32fast = "1.3"

# SQL parsing
sqlparser = { version = "0.41", features = ["visitor"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Testing
criterion = "0.5"
tempfile = "3.9"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
