[package]
name = "fluxdb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "FluxDB core storage engine - high-performance time-series database"

[dependencies]
# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
bincode.workspace = true

# Concurrency
crossbeam-skiplist.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true

# Compression
lz4_flex.workspace = true

# Checksums
crc32fast.workspace = true

# SQL parsing
sqlparser.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
regex = "1"

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

# [[bench]]
# name = "write_bench"
# harness = false

# [[bench]]
# name = "query_bench"
# harness = false
