[package]
name = "fluxdb-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "FluxDB HTTP/gRPC server"

[[bin]]
name = "fluxdb"
path = "src/main.rs"

[dependencies]
fluxdb-core = { path = "../fluxdb-core" }

# Async runtime
tokio.workspace = true

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
